criação de mais um paragrafo no site principal

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ex, 
     voluptatibus blanditiis accusantium at tempora, est voluptatem voluptas
     deleniti amet quisquam ab id ducimus, ipsam voluptate. Iste ex ratione veniam!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat quibusdam aliquam accusamus? Ipsa, non quasi voluptatibus nisi mollitia, natus veritatis fugiat, voluptatum sint quibusdam iste nulla. Voluptatum sit illum perspiciatis.</p>
 </body>
 </html>
